working with command اظن